# phonetic-bangla

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/: __init__.py
src/phoneticbn/: engine.py
